# scratchpad

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile.containers  README.md
.devcontainer/: Dockerfile.development  devcontainer.json
builder-image/: Dockerfile  Dockerfile.mcr-dev  Makefile  README.md
pipelines/: hello-goodbye-pipeline.yaml
